Fixed location accordion spacing

--- a/assets/dev/scss/components/_accordion.scss
+++ b/assets/dev/scss/components/_accordion.scss
@@ -18,7 +18,7 @@
         background: transparent;
         border-bottom: solid color('border') 1px;
         border-radius: 0;
-        padding: spacing('2x-small') 0;
+        padding: spacing() 0;
     }
 
     .accordion-title {
